fix: corrected wrong width of heroContent

--- a/shared/HomeScreen/HomeScreen.module.css
+++ b/shared/HomeScreen/HomeScreen.module.css
@@ -37,7 +37,7 @@
 }
 
 .heroContent {
-  max-width: var(--wide);
+  max-width: 800px;
 }
 
 .heroTitle {
